--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,10 @@ spring:
       - db
       - openapi
     active: prod
+
+server:
+  error:
+    include-binding-errors: always
+    include-message: always
+
+
